--- a/compile/MainWindow.xaml
+++ b/compile/MainWindow.xaml
@@ -10,8 +10,9 @@
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="274" Margin="10,39,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="227"/>
         <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="89"/>
         <Label x:Name="label1" Content="Label" HorizontalAlignment="Left" Margin="322,10,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="242,90,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <Button x:Name="button" Content="lex" HorizontalAlignment="Left" Margin="242,90,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
         <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="274" Margin="322,39,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="253"/>
+        <Button x:Name="button1" Content="OpenFile" HorizontalAlignment="Left" Margin="162,13,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
 
     </Grid>
 </Window>
